--- a/index.html
+++ b/index.html
@@ -1,1 +1,149 @@
-hellohello
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns='http://www.w3.org/1999/xhtml'>
+<head>
+<meta content='text/html; charset=utf-8' http-equiv='Content-Type' />
+<meta content='text/css' http-equiv='Content-Style-Type' />
+<link href='/favicon.ico' rel='icon' />
+<link href="/stylesheets/application.css?1364302246" media="screen" rel="stylesheet" type="text/css" />
+<link href="/stylesheets/regional.css?1364302246" media="screen" rel="stylesheet" type="text/css" />
+<link href="/stylesheets/simplemodal.css?1364302246" media="screen" rel="stylesheet" type="text/css" />
+
+<!-- IE 6 hacks -->
+<!--[if lt IE 7]>
+<link href="/stylesheets/simplemodal_ie.css?1364302246" media="screen" rel="stylesheet" type="text/css" />
+<![endif]-->
+
+<title>TokyuRuby会議08 - Regional RubyKaigi</title>
+</head>
+<body>
+
+<div style='background: #000'>
+  <div style='width: 90%; margin: 0 auto'>
+    <a href="/" class="regional_rubykaigi">Regional RubyKaigi</a>
+  </div>
+</div>
+<div id='wrapper'>
+  <div id='container'>
+    <div class='event'>
+      <h2>
+        TokyuRuby会議08<span class='official_tag'>
+          <br />(
+          tokyurubykaigi08
+          <span class='official_tag'>
+            ,
+            <a href="http://twitter.com/search?q=%23tqrk08">#tqrk08</a>
+          </span>
+          )
+        </span>
+      </h2>
+    </div>
+    <h3>参加登録</h3>
+    <div class="registration_external">準備中</div>
+    <hr>
+    <h3>LT への応募</h3>
+    <div class="registration_external">準備中</div>
+    <hr>
+    <div class='event_desc'><hr>
+      <h3>TokyuRuby会議について</h3>
+      <ul>
+        <li>TokyuRuby会議は、東京で開催される Regional RubyKaigi です。</li>
+        <li>Ruby に興味を持つエンジニアが集う <a href="http://qwik.jp/tokyurb/">Tokyu.rb</a> 主催の LT 大会です。</li>
+        <li>飲み食いしつつ、みんなで LT をして盛り上がろうというイベントです。</li>
+        <li><strong>抽選LT があります！</strong> 抽選LT発表者の指名は抽選により、当日会場にて行います！当たるかもしれません！</li>
+        <li>今回も参加者のみなさんの投票により<strong>酒王、飯王、LT王</strong>を決定します！<ul>
+        </ul></li>
+        <li>おいしいお酒、食べ物、LTの持ち込みをお待ちしております。</li>
+      </ul>
+      <hr>
+      <h3>開催日時</h3>
+      <ul>
+        <li>2014年11月29日(土曜日)<ul>
+          <li><strong>いい肉</strong>（１１２９）の日です。</li>
+        </ul></li>
+      </ul>
+      <h3>会場</h3>
+      <ul>
+        <li>株式会社VOYAGE GROUP 様</li>
+        <li><a href="http://voyagegroup.com/company/access/">アクセス</a></li>
+      </ul>
+      <h3>参加費</h3>
+      <ul>
+        <li>参加費は <strong>無料</strong> です</li>
+        <li>主催メンバーへの<strong>カンパ(飲み物、食い物)</strong>をお待ちしております（皆様の<strong>善意</strong>によって成り立っています！）</li>
+        <li>また、<strong>酒王、飯王、LT王に認定された方への賞品も併せてお待ちしております</strong> (こちらも皆様の善意によって(ry</li>
+      </ul>
+      <hr>
+      <h3>その他</h3>
+      <h4>食べ物等について</h4>
+      <ul>
+        <li><strong>持ち込んだ食事は食べきりましょう！</strong></li>
+      </ul>
+      <h4>会場設備について</h4>
+      <ul>
+        <li>当日は<strong>電源タップの持参</strong>をお願いします。</li>
+        <li>無線LANなどのネットワーク設備はあるかもしれません。確実に使いたい方は各自ご用意をお願いします。</li>
+      </ul>
+      <h4>タグなど</h4>
+      <ul>
+        <li>公式タグ<ul>
+          <li><strong>tokyurubykaigi08</strong> (TokyuRuby会議08として)</li>
+        </ul></li>
+        <li>Twitter のハッシュタグ<ul>
+          <li><strong>#tqrk08</strong></li>
+        </ul></li>
+      </ul>
+      <hr>
+      <h3>スケジュール</h3>
+      <p>調整中です(イベントの性質上、進行状況により時間が前後する場合がございます。ご了承下さい）</p>
+      <table border="1">
+        <tr><th>10:00</th><td colspan="2">開場 </td></tr>
+        <tr><th>20:00頃</th><td colspan="2">終了 </td></tr>
+      </table>
+      <hr>
+      <h3>諸注意</h3>
+      <ul>
+        <li>LTの持ち時間は 5分 となっています。</li>
+        <li>進行状況・酔い具合によっては時間が前後する場合があります。</li>
+        <li>時間に余裕がある場合、基調講演の時間は無制限に長くなる可能性があります。時間はご自由にお使いいただけます。</li>
+        <li>参加者・登壇者・司会の酔い具合によっては、語気が強くなったり方言(主に関西弁)が出る可能性もありますが悪しからずご了承ください。</li>
+      </ul>
+      <hr>
+      <h3>前前回の様子</h3>
+      <ul>
+        <li>写真:<ul>
+          <li><a href="http://www.flickr.com/photos/koichiroo/sets/72157634646305233/">http://www.flickr.com/photos/koichiroo/sets/72157634646305233/</a></li>
+        </ul></li>
+      </ul>
+      <hr>
+      <h3>スタッフ</h3>
+      <ul>
+        <li>実行委員長：河野誠</li>
+        <li>副委員長：小川伸一郎</li>
+        <li>櫻井達生</li>
+        <li>沢田正</li>
+        <li>三浦美咲樹</li>
+        <li>五十嵐邦明</li>
+        <li>大場光一郎</li>
+        <li>小椋隆史</li>
+        <li>影山勝彦</li>
+        <li>加藤由佳</li>
+      </ul>
+      <hr>
+
+    </div>
+    <h3>参加登録</h3>
+    <div class="registration_external">準備中</div>
+    <h3>お問い合わせ</h3>
+    <p class='contact'>TokyuRuby会議08に関するお問い合わせは、tokyurubykaigi_at_googlegroups.comまでメールにてご連絡ください。</p>
+  </div>
+
+</div>
+</div>
+<div style='background: #000'>
+<div style='width:90%; margin:0 auto; text-align:right'>
+  <a href="/" class="regional_rubykaigi">Regional RubyKaigi</a>
+</div>
+</div>
+</body>
+</html>
+
