stylesheet path modify

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 <meta content='text/html; charset=utf-8' http-equiv='Content-Type' />
 <meta content='text/css' http-equiv='Content-Style-Type' />
-<link href='/favicon.ico' rel='icon' />
-<link href="/stylesheets/application.css?1364302246" media="screen" rel="stylesheet" type="text/css" />
-<link href="/stylesheets/regional.css?1364302246" media="screen" rel="stylesheet" type="text/css" />
-<link href="/stylesheets/simplemodal.css?1364302246" media="screen" rel="stylesheet" type="text/css" />
+<link href='favicon.ico' rel='icon' />
+<link href="stylesheets/application.css?1364302246" media="screen" rel="stylesheet" type="text/css" />
+<link href="stylesheets/regional.css?1364302246" media="screen" rel="stylesheet" type="text/css" />
+<link href="stylesheets/simplemodal.css?1364302246" media="screen" rel="stylesheet" type="text/css" />
 
 <!-- IE 6 hacks -->
 <!--[if lt IE 7]>
