add LT form url

--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
         </span>
       </h2>
     </div>
-    <h3>参加登録</h3>
-    <div class="registration_external">準備中</div>
-    <hr>
     <h3>LT への応募</h3>
+    <div class="registration_external">
+      <p><a href="https://docs.google.com/spreadsheet/viewform?formkey=dHBraEZzUjBWRVFzMUJhcDRTSThUZkE6MA">こちら</a>からお申し込み下さい。</p>
+    </div>
+    <hr>
+    <h3>参加登録</h3>
     <div class="registration_external">準備中</div>
     <hr>
     <div class='event_desc'><hr>
