--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
     <h3>LT への応募</h3>
     <div class="registration_external">
-      <p><a href="https://docs.google.com/spreadsheet/viewform?formkey=dHBraEZzUjBWRVFzMUJhcDRTSThUZkE6MA">こちら</a>からお申し込み下さい。</p>
+      終了しました。多数のご応募、ありがとうございました！
     </div>
     <hr>
     <h3>参加登録</h3>
