fix open/start time

--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
       <h3>スケジュール</h3>
       <p>調整中です(イベントの性質上、進行状況により時間が前後する場合がございます。ご了承下さい）</p>
       <table border="1">
-        <tr><th>10:00</th><td colspan="2">開場 </td></tr>
+        <tr><th>9:30</th><td colspan="2">開場 </td></tr>
+        <tr><th>10:00</th><td colspan="2">開始 </td></tr>
         <tr><th>20:00頃</th><td colspan="2">終了 </td></tr>
       </table>
       <hr>
