add registration url

--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
     </div>
     <hr>
     <h3>参加登録</h3>
-    <div class="registration_external">準備中</div>
-    <hr>
+    <div class="registration_external">登録は<a href="http://tokyu-rubykaigi.doorkeeper.jp/events/16939">こちら</div>
     <div class='event_desc'><hr>
       <h3>TokyuRuby会議について</h3>
       <ul>
