--- a/index.html
+++ b/index.html
@@ -95,11 +95,65 @@
       </ul>
       <hr>
       <h3>スケジュール</h3>
-      <p>調整中です(イベントの性質上、進行状況により時間が前後する場合がございます。ご了承下さい）</p>
+      <p>敬称略。イベントの性質上、進行状況により時間が前後する場合がございます。ご了承下さい。</p>
       <table border="1">
-        <tr><th>9:30</th><td colspan="2">開場 </td></tr>
-        <tr><th>10:00</th><td colspan="2">開始 </td></tr>
-        <tr><th>20:00頃</th><td colspan="2">終了 </td></tr>
+        <tr><th>9:30〜</th><td colspan="2">開場、設営</td></tr>
+        <tr><th rowspan="2">10:00〜</th><td colspan="2">開始挨拶と説明</td></tr>
+        <tr><td>会場スポンサーセッション</td><td>株式会社VOYAGE GROUP様</tr>
+
+        <tr><th rowspan="10">10:10〜11:35</th><td>いろ</td><td>DockerとCapistranoとPerfume</td></tr>
+        <tr><td>伊藤邦彦@kunitoo</td><td>Hypermicrodata Client</td></tr>
+        <tr><td>いがいが</td><td>そろそろTDDについて一言いっておくか</td></tr>
+        <tr><td>tatsuoSakurai</td><td>KPT@home</td></tr>
+        <tr><td>馬場 一樹 (ばば かずき) @kbaba1001</td><td>Rails Validation</td></tr>
+        <tr><td>chezou</td><td>iruby+nbviewerのススメ</td></tr>
+        <tr><td>久保優子か檜山学</td><td>「経営者の妻を持つ夫が知るべき96のこと(仮)」</td></tr>
+        <tr><td>joker1007</td><td>５分で話せる限り話すRSpec Hacking Guide</td></tr>
+        <tr><td>みかみよしゆき</td><td>Rubyで出来ているかもしれないRTMを6年間愛用している自分の使い方について</td></tr>
+        <tr><td>@igjit</td><td>Rails初心者が【Emacs Lisp Package推薦サービス】つくってみた。</td></tr>
+
+        <tr><th>11:35〜11:50</th><td colspan="2">休憩、LT抽選</td></tr>
+
+        <tr><th rowspan="5">11:50〜12:30</th><td>こしばとしあき</th><td>＼Tokyuだからこそできる／ ＼Tokyu以外ではとてもできない／【撮影禁止】「RWCに行ってきたのだが…」ぶっちゃけトーク大会【ツイート禁止】</td></tr>
+        <tr><td>雨宮 悟(@rail44)</th><td>Webアプリケーションフレームワーク Lotus</td></tr>
+        <tr><td>@1syo</th><td>Testing wercker plugin with bats</td></tr>
+        <tr><td>@yuumi3 (吉田裕美)</th><td>Ruby, Ruby on Railsだけやっていれば良いのでしょうか？</td></tr>
+        <tr><td>@cesare</th><td>サラリーマン→フリーランス→経営者→サラリーマン (予) だけど質問ある？</td></tr>
+
+        <tr><th>12:30〜13:00</th><td colspan="2">抽選LT</td></tr>
+
+        <tr><th>13:00〜14:00</th><td colspan="2">休憩</td></tr>
+
+        <tr><th>14:00〜</th><td>樽酒スポンサーセッション</td><td>株式会社万葉様</td></tr>
+
+        <tr><th rowspan="9">14:10〜15:25</th><td>sue445</td><td>プリキュアのRuby実装の紹介</td></tr>
+        <tr><td>福井修 @iR3</td><td>エンドツーエンドテストの今後</td></tr>
+        <tr><td>角 幸一郎(@sumyapp)</td><td>SideCI再び～RubyでDockerコントロールしてCIツールを動かしてみてます～</td></tr>
+        <tr><td>ぺけみさお</td><td>BestGems.org -RubyGemsランキングサイトのご紹介-</td></tr>
+        <tr><td>kk_Ataka</td><td>jekyllドキュメント翻訳を継続するための取組(仮)</td></tr>
+        <tr><td>小川 伸一郎</td><td>転職（仮）</td></tr>
+        <tr><td>河野 誠</td><td>MDD</td></tr>
+        <tr><td>海沼 玲史</td><td>gem作った（仮）</td></tr>
+        <tr><td>Nekoteni</td><td>Road to Rails Madam</td></tr>
+        <tr><th>15:25〜15:40</th><td colspan="2">休憩、LT抽選</td></tr>
+        <tr><th rowspan="5">15:40〜16:20<td>publichtml</td><td>私とRubyと彼氏(仮)</td></tr>
+        <tr><td>tk0miya (Takeshi KOMIYA)</td><td>マークアップ言語のエコシステムについて</td></tr>
+        <tr><td>伊藤 浩一 (@koic)</td><td>オルフェウス・プロセス</td></tr>
+        <tr><td>はるかさん</td><td>デジタルネイティブと趣味のWeb開発について</td></tr>
+        <tr><td>赤塚 妙子 @ken_c_lo</td><td>そろそろ esa についてひとこと言っておくか (\( ⁰⊖⁰)/) （仮）</td></tr>
+        <tr><th>16:20〜16:50</th><td colspan="2">抽選LT</td></tr>
+        <tr><th>16:50〜17:00</th><td colspan="2">休憩</td></tr>
+        <tr><th rowspan="8">17:00〜18:00</th><td>原 征弘</td><td>コンポーネントベースのUI構築 on Rails</td></tr>
+        <tr><td>@chiastolite</td><td>VAGRANT STORY</td></tr>
+        <tr><td>大林</td><td>最近Ruby/SDL2というのを開発していて当日にはいい感じにできているはずなのでその話をしたいと思います。</td></tr>
+        <tr><td>さとう たつや</td><td>Rubyで楽しくお買い物（仮）</td></tr>
+        <tr><td>株式会社永和システムマネジメント 羽根田 洋</td><td>"僕（営業）とRuby×Agile～営業からみたうちのメンバー達～</td></tr>
+        <tr><td>kwappa (Hiromu Shioya)</td><td>アート・オブ・ジョブホッピング</td></tr>
+        <tr><td>@trmmy</td><td>TJARやってきた</td></tr>
+        <tr><td>onk</td><td>ドキッ！mountable engine だらけの Rails アプリ開発 (ポロリもあるよ</td></tr>
+        <tr><th>18:00〜</th><td colspan="2">集計、結果発表</td></tr>
+        <tr><th>18:15〜</th><td colspan="2">酒王、飯王、LT王 基調講演</td></tr>
+        <tr><th>19:00</th><td colspan="2">終了 </td></tr>
       </table>
       <hr>
       <h3>諸注意</h3>
