Fix the title of cesare's talk

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <tr><td>雨宮 悟(@rail44)</th><td>Webアプリケーションフレームワーク Lotus</td></tr>
         <tr><td>@1syo</th><td>Testing wercker plugin with bats</td></tr>
         <tr><td>@yuumi3 (吉田裕美)</th><td>Ruby, Ruby on Railsだけやっていれば良いのでしょうか？</td></tr>
-        <tr><td>@cesare</th><td>サラリーマン→フリーランス→経営者→サラリーマン (予) だけど質問ある？</td></tr>
+        <tr><td>@cesare</th><td>会社員→フリーランス→経営者→会社員 (予) だけど質問ある？</td></tr>
 
         <tr><th>12:30〜13:00</th><td colspan="2">抽選LT</td></tr>
 
