--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
         <tr><th>12:30〜13:00</th><td colspan="2">抽選LT</td></tr>
 
-        <tr><th>13:00〜14:00</th><td colspan="2">休憩</td></tr>
+        <tr><th>13:00〜14:00</th><td colspan="2">休憩、鏡割り (13:55頃)</td></tr>
 
         <tr><th>14:00〜</th><td>樽酒スポンサーセッション</td><td>株式会社万葉様</td></tr>
 
