Move kagamiwari into the sponser session :leaves:

--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
 
         <tr><th>12:30〜13:00</th><td colspan="2">抽選LT</td></tr>
 
-        <tr><th>13:00〜14:00</th><td colspan="2">休憩、鏡割り (13:55頃)</td></tr>
+        <tr><th>13:00〜14:00</th><td colspan="2">休憩</td></tr>
 
-        <tr><th>14:00〜</th><td>樽酒スポンサーセッション</td><td>株式会社万葉様</td></tr>
+        <tr><th>14:00〜</th><td>樽酒スポンサーセッション＆鏡割り</td><td>株式会社万葉様</td></tr>
 
         <tr><th rowspan="9">14:10〜15:25</th><td>sue445</td><td>プリキュアのRuby実装の紹介</td></tr>
         <tr><td>福井修 @iR3</td><td>エンドツーエンドテストの今後</td></tr>
