--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <tr><td>@chiastolite</td><td>VAGRANT STORY</td></tr>
         <tr><td>大林</td><td>最近Ruby/SDL2というのを開発していて当日にはいい感じにできているはずなのでその話をしたいと思います。</td></tr>
         <tr><td>さとう たつや</td><td>Rubyで楽しくお買い物（仮）</td></tr>
-        <tr><td>株式会社永和システムマネジメント 羽根田 洋</td><td>"僕（営業）とRuby×Agile～営業からみたうちのメンバー達～</td></tr>
+        <tr><td>株式会社永和システムマネジメント 羽根田 洋</td><td>僕（営業）とRuby×Agile～営業からみたうちのメンバー達～</td></tr>
         <tr><td>kwappa (Hiromu Shioya)</td><td>アート・オブ・ジョブホッピング</td></tr>
         <tr><td>@trmmy</td><td>TJARやってきた</td></tr>
         <tr><td>onk</td><td>ドキッ！mountable engine だらけの Rails アプリ開発 (ポロリもあるよ</td></tr>
@@ -183,6 +183,7 @@
         <li>小椋隆史</li>
         <li>影山勝彦</li>
         <li>加藤由佳</li>
+        <li>小田切わか菜</li>
       </ul>
       <hr>
 
