cancell @yuumi3 lt

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <tr><th rowspan="5">11:50〜12:30</th><td>こしばとしあき</th><td>＼Tokyuだからこそできる／ ＼Tokyu以外ではとてもできない／【撮影禁止】「RWCに行ってきたのだが…」ぶっちゃけトーク大会【ツイート禁止】</td></tr>
         <tr><td>雨宮 悟(@rail44)</th><td>Webアプリケーションフレームワーク Lotus</td></tr>
         <tr><td>@1syo</th><td>Testing wercker plugin with bats</td></tr>
-        <tr><td>@yuumi3 (吉田裕美)</th><td>Ruby, Ruby on Railsだけやっていれば良いのでしょうか？</td></tr>
+        <tr><td><s>@yuumi3 (吉田裕美)</s></th><td><s>Ruby, Ruby on Railsだけやっていれば良いのでしょうか？</s></td></tr>
         <tr><td>沢田正 (@cesare)</th><td>会社員→フリーランス→経営者→会社員 (予) だけど質問ある？</td></tr>
 
         <tr><th>12:30〜13:00</th><td colspan="2">抽選LT</td></tr>
