update photo url

--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@
         <li>参加者・登壇者・司会の酔い具合によっては、語気が強くなったり方言(主に関西弁)が出る可能性もありますが悪しからずご了承ください。</li>
       </ul>
       <hr>
-      <h3>前前回の様子</h3>
+      <h3>前回の様子</h3>
       <ul>
         <li>写真:<ul>
-          <li><a href="http://www.flickr.com/photos/koichiroo/sets/72157634646305233/">http://www.flickr.com/photos/koichiroo/sets/72157634646305233/</a></li>
+          <li><a href="https://www.flickr.com/photos/koichiroo/sets/72157643894260863/">https://www.flickr.com/photos/koichiroo/sets/72157643894260863/</li>
         </ul></li>
       </ul>
       <hr>
