cancell さとうたつやさん lt

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <tr><th rowspan="8">17:00〜18:00</th><td>原 征弘</td><td>コンポーネントベースのUI構築 on Rails</td></tr>
         <tr><td>@chiastolite</td><td>VAGRANT STORY</td></tr>
         <tr><td>大林</td><td>最近Ruby/SDL2というのを開発していて当日にはいい感じにできているはずなのでその話をしたいと思います。</td></tr>
-        <tr><td>さとう たつや</td><td>Rubyで楽しくお買い物（仮）</td></tr>
+        <tr><td><s>さとう たつや</s></td><td><s>Rubyで楽しくお買い物（仮）</s></td></tr>
         <tr><td>株式会社永和システムマネジメント 羽根田 洋</td><td>僕（営業）とRuby×Agile～営業からみたうちのメンバー達～</td></tr>
         <tr><td>kwappa (Hiromu Shioya)</td><td>アート・オブ・ジョブホッピング</td></tr>
         <tr><td>@trmmy</td><td>TJARやってきた</td></tr>
