cancell @sumiapp lt

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
         <tr><th rowspan="9">14:10〜15:25</th><td>sue445</td><td>プリキュアのRuby実装の紹介</td></tr>
         <tr><td>福井修 @iR3</td><td>エンドツーエンドテストの今後</td></tr>
-        <tr><td>角 幸一郎(@sumyapp)</td><td>SideCI再び～RubyでDockerコントロールしてCIツールを動かしてみてます～</td></tr>
+        <tr><td><s>角 幸一郎(@sumyapp)</s></td><td><s>SideCI再び～RubyでDockerコントロールしてCIツールを動かしてみてます～</s></td></tr>
         <tr><td>ぺけみさお</td><td>BestGems.org -RubyGemsランキングサイトのご紹介-</td></tr>
         <tr><td>kk_Ataka</td><td>jekyllドキュメント翻訳を継続するための取組(仮)</td></tr>
         <tr><td>小川 伸一郎</td><td>転職（仮）</td></tr>
