Tokyu.rbへのリンクをqwikからFacebookグループへ変更

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <h3>TokyuRuby会議について</h3>
       <ul>
         <li>TokyuRuby会議は、東京で開催される Regional RubyKaigi です。</li>
-        <li>Ruby に興味を持つエンジニアが集う <a href="http://qwik.jp/tokyurb/">Tokyu.rb</a> 主催の LT 大会です。</li>
+        <li>Ruby に興味を持つエンジニアが集う <a href="https://www.facebook.com/groups/928069233888488/">Tokyu.rb</a> 主催の LT 大会です。</li>
         <li>飲み食いしつつ、みんなで LT をして盛り上がろうというイベントです。</li>
         <li><strong>抽選LT があります！</strong> 抽選LT発表者の指名は抽選により、当日会場にて行います！当たるかもしれません！</li>
         <li>今回も参加者のみなさんの投票により<strong>酒王、飯王、LT王</strong>を決定します！<ul>
